Fixed site menu to collapse sooner
Necessary to prevent the site label and menu items to not break and also collapse into the hamburger menu sooner.

Milestone: patch

--- a/app/assets/css/layout.css
+++ b/app/assets/css/layout.css
@@ -32,6 +32,7 @@
     font-weight: 600;
     margin: 0;
     text-transform: uppercase;
+    word-break: normal;
   }
 }
 
@@ -77,7 +78,7 @@
     }
   }
 
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: 800px) {
     .label {
       display: block;
       z-index: var(--site-z-index-navigation);
@@ -118,6 +119,7 @@
     display: flex;
     gap: 0.5rem;
     padding: 0.3rem;
+    word-break: normal;
   }
 
   .link {
@@ -134,7 +136,7 @@
     }
   }
 
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: 800px) {
     color: var(--site-black);
     display: none;
     position: absolute;
